fix: add z-index to app loading

--- a/frontend/assets/scss/app.scss
+++ b/frontend/assets/scss/app.scss
@@ -20,6 +20,7 @@ p.app-error-message {
     bottom: 0;
     background-color: white;
     opacity: 0.5;
+    z-index: 99999;
 }
 
 .app-loading {
@@ -34,6 +35,7 @@ p.app-error-message {
     background-color: $primary;
     color: $primary;
     animation: dotElastic 1s infinite linear;
+    z-index: 99999;
 }
 
 .app-loading::before,
